le bind fonctionne !

--- a/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
+++ b/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
@@ -8,7 +8,7 @@
 
 <SplitPane id="AnchorPane" dividerPositions="0.22" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60" fx:controller="gdt.application.graphic.ProjectWindowController">
     <items>
-      <ListView prefHeight="398.0" prefWidth="43.0" />
+      <ListView fx:id="projectList" prefHeight="398.0" prefWidth="43.0" />
         
       <!--ProjectsView fx:id="projectsView" prefHeight="398.0" prefWidth="127.0" /-->
       <SplitPane dividerPositions="0.8391959798994975" orientation="VERTICAL" prefHeight="398.0" prefWidth="356.0">
