--- a/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
+++ b/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
@@ -38,13 +38,6 @@
          </bottom>
       </BorderPane>
       <BorderPane>
-         <center>
-            <ScrollPane BorderPane.alignment="CENTER">
-               <content>
-                  <ListView fx:id="taskList" minHeight="200" minWidth="200" />
-               </content>
-            </ScrollPane>
-         </center>
          <bottom>
             <FlowPane BorderPane.alignment="CENTER">
                <children>
@@ -70,6 +63,32 @@
                </children>
             </FlowPane>
          </bottom>
+         <center>
+            <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <items>
+                  <ListView fx:id="taskList" minHeight="200" minWidth="200" />
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button fx:id="addTask" onMouseClicked="#addTask" mnemonicParsing="false" text="Add Task" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <TextField fx:id="descriptionTextField" text="Description" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                        <TextField fx:id="titleTextField" text="Title" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                        <Label fx:id="taskTitle" text="Label" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
+                        <Label fx:id="taskDescription" text="Label" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+               </items>
+            </SplitPane>
+         </center>
       </BorderPane>
    </items>
 </SplitPane>
