--- a/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
+++ b/Gestionnaire de taches/src/gdt/application/graphic/ProjectWindow.fxml
@@ -26,8 +26,8 @@
                     <children>
                         <GridPane fx:id="addProjectZone">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" />
+                                <ColumnConstraints hgrow="SOMETIMES" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints vgrow="SOMETIMES" />
@@ -44,8 +44,8 @@
                         </GridPane>
                         <GridPane fx:id="addTaskZone">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" />
+                                <ColumnConstraints hgrow="SOMETIMES" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints vgrow="SOMETIMES" />
@@ -71,7 +71,7 @@
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" />
                         <ColumnConstraints hgrow="SOMETIMES" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints vgrow="SOMETIMES" />
